2005-04-18  Jeroen Frijters  <jeroen@frijters.net>

	* java/lang/Class.java (getModifiers, newInstance): Changed
	call to VMClass.getModifiers().
	* vm/reference/java/lang/VMClass.java
	(getModifiers(Class, boolean)): New method.

2005-04-18  Jeroen Frijters  <jeroen@frijters.net>

	* java/awt/GraphicsEnvironment.java
	(localGraphicsEnvironment): New field.
	(getLocalGraphicsEnvironment): Added support for java.awt.graphicsenv
	property.
	(isHeadless): Added support for java.awt.headless property.
	(isHeadlessInstance): Call headless().

2005-04-18  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/java/beans/IntrospectionIncubator.java
	(addToPropertyHash, addToListenerHash): Don't confuse get(),
	set(), is(), add() and remove() with properties or events.

2005-04-17  Roman Kennke  <roman@kennke.org>

	* javax/swing/JToolBar.java
	(addImpl): Adjust added AbstractButtons to look and feel like
	toolbar buttons.
	* javax/swing/plaf/metal/MetalBorders.java:
	Adjusted insets of ButtonBorder.
	(RolloverMarginBorder): Added class for toolbar buttons.
	(getButtonBorder): Adjusted factory method to return a shared
	instance of button border.
	(getToolbarButtonBorder): Added factory method to return a shared
	instance of toolbar button border.
	(getMarginBorder): Added factory method to return a shared
	instance of margin border.
	* javax/swing/plaf/metal/MetalButtonUI.java
	(installDefauls): If button is child of a JToolBar then set
	special border on this button.

2005-04-17  Roman Kennke  <roman@kennke.org>

	* javax/swing/text/SimpleAttributeSet.java
	(addAttribute): Removed null pointer check.
	* javax/swing/text/StyleContext.java
	(NamedStyle.setResolveParent): Added null pointer check.

2005-04-17  Roman Kennke  <roman@kennke.org>

	* examples/gnu/classpath/exammples/swing/Demo.java:
	Print a short summary for available values for the property
	swing.defaultlaf.
	Set MetalLookAndFeel as default.
	Pulled out GNULookAndFeel so that it is accessible.